webapp-color/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
    type: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
      type: deployment
  template:
    metadata:
      labels:
        app: webapp
        type: deployment
    spec:
      containers:
      - name: webapp
        image: #{FULLIMAGENAME}#
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 15
          periodSeconds: 2
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp
    type: deployment
  type: ClusterIP
